Bug 413439 - QtQuick dialog: show loading status messages in the view with a spinner or progress indicator, not using PassiveNotifications
Summary: QtQuick dialog: show loading status messages in the view with a spinner or pr...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-10-25 13:08 UTC by Nate Graham
Modified: 2019-11-08 14:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2019-10-25 13:08:59 UTC
When the dialog first loads, it sends several passiveNotifications in rapid succession. The loading UX would be better if it was more like how Discover does it IMO: with the status messages shown under a spinner or progress bar in the empty view itself, disappearing when the view becomes populated.
Comment 1 Dan Leinir Turthra Jensen 2019-11-08 14:32:17 UTC
Git commit f1f439cbef94a700847bd20c49d3436851542106 by Dan Leinir Turthra Jensen.
Committed on 08/11/2019 at 14:32.
Pushed by leinir into branch 'master'.

Give some more pretty feedback in NewStuff::Page while the Engine is loading

Summary:
This adds an isLoading property to KNSQuick::Engine, and that is used
to show a busy indicator (with descriptive label) when engine is loading.

Test Plan:
Without this patch: Empty content panel while loading is happening
With this patch:
{F7744725}

Reviewers: #knewstuff, #frameworks, ngraham, #vdg

Reviewed By: ngraham, #vdg

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25173

M  +11   -4    src/qtquick/qml/DialogContent.qml
M  +47   -4    src/qtquick/qml/Page.qml
M  +20   -1    src/qtquick/quickengine.cpp
M  +16   -0    src/qtquick/quickengine.h

https://commits.kde.org/knewstuff/f1f439cbef94a700847bd20c49d3436851542106