Give some more pretty feedback in NewStuff::Page while the Engine is loading

Summary:
This adds an isLoading property to KNSQuick::Engine, and that is used
to show a busy indicator (with descriptive label) when engine is loading.

BUG:413439

Test Plan:
Without this patch: Empty content panel while loading is happening
With this patch:
{F7744725}

Reviewers: #knewstuff, #frameworks, ngraham, #vdg

Reviewed By: ngraham, #vdg

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D25173